--- a/main.html
+++ b/main.html
@@ -8,8 +8,8 @@
   </head>
 
   <body>
-    <main onClick = test()>
-      Content goes here.
+    <main>
+      <p> onClick = "test()">Content goooooes here.</p>
     </main>
   </body>
   <script src="index.js"></script>
