--- a/main.html
+++ b/main.html
@@ -9,7 +9,7 @@
 
   <body>
     <main>
-      <p> onClick = "test()">Content goooooes here.</p>
+      <p onClick = "test()">Content goooooes here.</p>
     </main>
   </body>
   <script src="index.js"></script>
