--- a/main.html
+++ b/main.html
@@ -7,9 +7,9 @@
     <link rel="stylesheet" href="./style.css">
   </head>
 
-  <body>
+  <body onClick="test()">
     <main>
-      <p onClick="test()">Content goooooes here.</p>
+      <p>Content goooooes here.</p>
     </main>
   </body>
   <script src="index.js"></script>
