--- a/main.html
+++ b/main.html
@@ -9,7 +9,7 @@
 
   <body onClick="test()">
     <main>
-      <p>Content goooooes here.</p>
+      <p>Contentttttt goooooes here.</p>
     </main>
   </body>
   <script src="index.js"></script>
