--- a/main.html
+++ b/main.html
@@ -1,17 +1,43 @@
 <!doctype html>
+
 <html>
   
   <head>
-    <title>HTML Page</title>
+    <title>Samekh</title>
     <meta charset="UTF-8">
     <link rel="stylesheet" href="./style.css">
   </head>
 
   <body onClick="test()">
-    <main>
-      <p>Contentttttt goooooes here.</p>
+    <div id="aboutPage">
+      <main>
+        <p>First Page</p>
+      </main>
+    </div>
+
+    <div id="knowledgePage" hidden>
+      <main>
+        <p>Knowledge Page</p>
+      </main>
+    </div>
+
+    <div id="projectsPage" hidden>
+      <main>
+        <p>Projects Page</p>
+      </main>
+    </div>
+
+    <div id="contactPage" hidden>
+      <main>
+        <p>Contacts Page</p>
+      </main>
+    </div>
+
     </main>
+
+
   </body>
+
   <script src="index.js"></script>
 
 </html>
