--- a/main.html
+++ b/main.html
@@ -15,7 +15,7 @@
       </main>
     </div>
 
-    <div id="knowledgePage" hidden>
+    <div id="knowledgePage">
       <main>
         <p>Knowledge Page</p>
       </main>
