--- a/main.html
+++ b/main.html
@@ -9,31 +9,31 @@
   </head>
 
   <body onClick="test()">
-    <div id="aboutPage">
+
       <main>
         <p>First Page</p>
       </main>
-    </div>
+
 
     <div id="knowledgePage">
-      <main>
+ 
         <p>Knowledge Page</p>
-      </main>
+   
     </div>
 
-    <div id="projectsPage" hidden>
-      <main>
+    <div id="projectsPage">
+  
         <p>Projects Page</p>
-      </main>
+ 
     </div>
 
-    <div id="contactPage" hidden>
-      <main>
+    <div id="contactPage">
+   
         <p>Contacts Page</p>
-      </main>
+     
     </div>
 
-    </main>
+   
 
 
   </body>
