--- a/main.html
+++ b/main.html
@@ -6,6 +6,7 @@
     <title>Samekh</title>
     <meta charset="UTF-8">
     <link rel="stylesheet" href="./style.css">
+    <link href="https://fonts.googleapis.com/css2?family=Orbitron:wght@900&display=swap" rel="stylesheet">
   </head>
 
   <body onClick="test()">
