--- a/main.html
+++ b/main.html
@@ -6,13 +6,14 @@
     <title>Samekh</title>
     <meta charset="UTF-8">
     <link rel="stylesheet" href="./style.css">
-    <link href="https://fonts.googleapis.com/css2?family=Orbitron:wght@900&display=swap" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css2?family=Orbitron:wght@400;900&display=swap" rel="stylesheet">
   </head>
 
   <body onClick="test()">
 
       <main>
-        <p>First Page</p>
+        <h1>First Page</h1>
+        <p>Bio goes here</p>
       </main>
 
 
