--- a/main.html
+++ b/main.html
@@ -11,7 +11,7 @@
 
   <body onClick="test()">
     <main>
-      <h1>First Page</h1>
+      <h1>First Page2</h1>
       <p>Bio goes here</p>
     </main>
 
