--- a/main.html
+++ b/main.html
@@ -13,18 +13,26 @@
     <main>
       <h1>First Page2</h1>
       <p>Bio goes here</p>
+      <button>Right</button>
+      <button>Down</button>
     </main>
 
     <div id="knowledgePage">
       <p>Knowledge Page</p>
+      <button>Left</button>
+      <button>Down</button>
     </div>
 
     <div id="projectsPage">
       <p>Projects Page</p>
+      <button>Top</button>
+      <button>Right</button>
     </div>
 
     <div id="contactPage">
       <p>Contacts Page</p>
+      <button>Top</button>
+      <button>Right</button>
     </div>
   </body>
 
