--- a/main.html
+++ b/main.html
@@ -10,31 +10,37 @@
   </head>
 
   <body>
+    <div style="display: table;">
+    <div style="display: table-row; display: table-cell;">
     <main id="aboutMe" onClick="test()">
-      <h1>First Page2</h1>
+      <h1>First Page 3.5</h1>
       <p>Bio goes here</p>
       <button href="#knowledgePage">Right</button>
       <button href="#projectsPage">Down</button>
     </main>
 
-    <div id="knowledgePage">
+    <div id="knowledgePage" style="display: table-cell;">
       <p>Knowledge Page</p>
       <button href="#aboutMe">Left</button>
       <button href="#contactPage">Down</button>
     </div>
+    </div>
 
-    <div id="projectsPage">
+    <div style="display: table-row;">
+    <div id="projectsPage" style="display: table-cell;">
       <p>Projects Page</p>
       <button href="#aboutMe">Top</button>
       <button href="#contactPage">Right</button>
     </div>
+    </div>
 
-    <div id="contactPage">
+    <div id="contactPage" style="display: table-cell;">
       <p>Contacts Page</p>
       <button href="#knowledgePage">Top</button>
       <button href="#projectsPage">Left</button>
     </div>
   </body>
+  </div>
 
   <script src="index.js"></script>
 
