--- a/main.html
+++ b/main.html
@@ -13,31 +13,31 @@
     <div style="display: table;">
     <div style="display: table-row; display: table-cell;">
     <main id="aboutMe" onClick="test()">
-      <h1>First Page 3.6</h1>
+      <h1>First Page 3.7</h1>
       <p>Bio goes here</p>
-      <button href="#knowledgePage">Right</button>
-      <button href="#projectsPage">Down</button>
+      <a href="#knowledgePage">Right</a>
+      <a href="#projectsPage">Down</a>
     </main>
 
     <div id="knowledgePage" style="display: table-cell;">
       <p>Knowledge Page</p>
-      <button href="#aboutMe">Left</button>
-      <button href="#contactPage">Down</button>
+      <a href="#aboutMe">Left</a>
+      <a href="#contactPage">Down</a>
     </div>
     </div>
 
     <div style="display: table-row;">
     <div id="projectsPage" style="display: table-cell;">
       <p>Projects Page</p>
-      <button href="#aboutMe">Top</button>
-      <button href="#contactPage">Right</button>
+      <a href="#aboutMe">Top</a>
+      <a href="#contactPage">Right</a>
     </div>
     </div>
 
     <div id="contactPage" style="display: table-cell;">
       <p>Contacts Page</p>
-      <button href="#knowledgePage">Top</button>
-      <button href="#projectsPage">Left</button>
+      <a href="#knowledgePage">Top</a>
+      <a href="#projectsPage">Left</a>
     </div>
   </body>
   </div>
