--- a/main.html
+++ b/main.html
@@ -10,8 +10,7 @@
   </head>
 
   <body>
-    <div style="display: table;">
-    <div style="display: table-row; display: table-cell;">
+
     <main id="aboutMe" onClick="test()">
       <h1>First Page 3.7</h1>
       <p>Bio goes here</p>
@@ -19,22 +18,19 @@
       <a href="#projectsPage">Down</a>
     </main>
 
-    <div id="knowledgePage" style="display: table-cell;">
+    <div id="knowledgePage">
       <p>Knowledge Page</p>
       <a href="#aboutMe">Left</a>
       <a href="#contactPage">Down</a>
     </div>
-    </div>
 
-    <div style="display: table-row;">
-    <div id="projectsPage" style="display: table-cell;">
+    <div id="projectsPage">
       <p>Projects Page</p>
       <a href="#aboutMe">Top</a>
       <a href="#contactPage">Right</a>
     </div>
-    </div>
 
-    <div id="contactPage" style="display: table-cell;">
+    <div id="contactPage">
       <p>Contacts Page</p>
       <a href="#knowledgePage">Top</a>
       <a href="#projectsPage">Left</a>
