--- a/main.html
+++ b/main.html
@@ -16,26 +16,26 @@
     <main id="aboutMe" onClick="test()">
       <h1>First Page 4.01</h1>
       <p>Bio goes here</p>
-      <a href="#knowledgePage">Right</a>
-      <a href="#projectsPage">Down</a>
+      <a class="toRight" href="#knowledgePage">Right</a>
+      <a class="toDown" href="#projectsPage">Down</a>
     </main>
 
     <div id="knowledgePage">
       <p>Knowledge Page</p>
-      <a href="#aboutMe">Left</a>
-      <a href="#contactPage">Down</a>
+      <a class="toLeft" href="#aboutMe">Left</a>
+      <a class="toDown" href="#contactPage">Down</a>
     </div>
 
     <div id="projectsPage">
       <p>Projects Page</p>
-      <a href="#aboutMe">Top</a>
-      <a href="#contactPage">Right</a>
+      <a class="toTop" href="#aboutMe">Top</a>
+      <a class="toRight" href="#contactPage">Right</a>
     </div>
 
     <div id="contactPage">
       <p>Contacts Page</p>
-      <a href="#knowledgePage">Top</a>
-      <a href="#projectsPage">Left</a>
+      <a class="toTop" href="#knowledgePage">Top</a>
+      <a class="toLeft" href="#projectsPage">Left</a>
     </div>
   </body>
   </div>
