--- a/main.html
+++ b/main.html
@@ -17,13 +17,13 @@
       <h1>First Page 4.01</h1>
       <p>Bio goes here</p>
       <a class="toRight" href="#knowledgePage">Right</a>
-      <a class="toDown" href="#projectsPage">Down</a>
+      <a class="toBottom" href="#projectsPage">Bottom</a>
     </main>
 
     <div id="knowledgePage">
       <p>Knowledge Page</p>
       <a class="toLeft" href="#aboutMe">Left</a>
-      <a class="toDown" href="#contactPage">Down</a>
+      <a class="toBottom" href="#contactPage">Bottom</a>
     </div>
 
     <div id="projectsPage">
