--- a/main.html
+++ b/main.html
@@ -16,26 +16,26 @@
     <main id="aboutMe" onClick="test()">
       <h1>First Page 4.04</h1>
       <p>Bio goes here</p>
-      <a class="toRight" href="#knowledgePage">Right</a>
-      <a class="toBottom" href="#projectsPage">Bottom</a>
+      <a class="toRight" href="#knowledgePage">→</a>
+      <a class="toBottom" href="#projectsPage">↓</a>
     </main>
 
     <div id="knowledgePage">
       <p>Knowledge Page</p>
-      <a class="toLeft" href="#aboutMe">Left</a>
-      <a class="toBottom" href="#contactPage">Bottom</a>
+      <a class="toLeft" href="#aboutMe">←</a>
+      <a class="toBottom" href="#contactPage">↓</a>
     </div>
 
     <div id="projectsPage">
       <p>Projects Page</p>
-      <a class="toTop" href="#aboutMe">Top</a>
-      <a class="toRight" href="#contactPage">Right</a>
+      <a class="toTop" href="#aboutMe">↑</a>
+      <a class="toRight" href="#contactPage">→</a>
     </div>
 
     <div id="contactPage">
       <p>Contacts Page</p>
-      <a class="toTop" href="#knowledgePage">Top</a>
-      <a class="toLeft" href="#projectsPage">Left</a>
+      <a class="toTop" href="#knowledgePage">↑</a>
+      <a class="toLeft" href="#projectsPage">←</a>
     </div>
   </body>
   </div>
