Page content space

--- a/main.html
+++ b/main.html
@@ -14,8 +14,10 @@
   <body>
 
     <main id="aboutMe" onClick="test()">
-      <h1>First Page 4.04</h1>
-      <p>Bio goes here</p>
+      <div class="pageContent">
+        <h1>First Page 4.04</h1>
+        <p>Bio goes here</p>
+      </div>
       <a class="toRight" href="#knowledgePage">→</a>
       <a class="toBottom" href="#projectsPage">↓</a>
     </main>
