--- a/main.html
+++ b/main.html
@@ -13,7 +13,7 @@
 
   <body>
 
-    <main id="aboutMe" onClick="test()">
+    <main id="aboutMe" class="background" onClick="test()">
       <div class="pageContent">
         <h1>First Page 4.04</h1>
         <p>Bio goes here</p>
@@ -22,19 +22,19 @@
       <a class="toBottom" href="#projectsPage">↓</a>
     </main>
 
-    <div id="knowledgePage">
+    <div id="knowledgePage" class="background">
       <p>Knowledge Page</p>
       <a class="toLeft" href="#aboutMe">←</a>
       <a class="toBottom" href="#contactPage">↓</a>
     </div>
 
-    <div id="projectsPage">
+    <div id="projectsPage" class="background">
       <p>Projects Page</p>
       <a class="toTop" href="#aboutMe">↑</a>
       <a class="toRight" href="#contactPage">→</a>
     </div>
 
-    <div id="contactPage">
+    <div id="contactPage" class="background">
       <p>Contacts Page</p>
       <a class="toTop" href="#knowledgePage">↑</a>
       <a class="toLeft" href="#projectsPage">←</a>
