--- a/main.html
+++ b/main.html
@@ -23,19 +23,25 @@
     </main>
 
     <div id="knowledgePage" class="background">
-      <p>Knowledge Page</p>
+      <div class="pageContent">
+        <p>Knowledge Page</p>
+      </div>
       <a class="toLeft" href="#aboutMe">←</a>
       <a class="toBottom" href="#contactPage">↓</a>
     </div>
 
     <div id="projectsPage" class="background">
-      <p>Projects Page</p>
+      <div class="pageContent">
+        <p>Projects Page</p>
+      </div>
       <a class="toTop" href="#aboutMe">↑</a>
       <a class="toRight" href="#contactPage">→</a>
     </div>
 
     <div id="contactPage" class="background">
-      <p>Contacts Page</p>
+      <div class="pageContent">
+        <p>Contacts Page</p>
+      </div>
       <a class="toTop" href="#knowledgePage">↑</a>
       <a class="toLeft" href="#projectsPage">←</a>
     </div>
