--- a/main.html
+++ b/main.html
@@ -15,7 +15,7 @@
 
     <main id="aboutMe" class="background" onClick="test()">
       <div class="pageContent">
-        <h1>First Page 4.04</h1>
+        <h1>About Me</h1>
         <p>Bio goes here</p>
       </div>
       <a class="toRight" href="#knowledgePage">→</a>
@@ -24,7 +24,7 @@
 
     <div id="knowledgePage" class="background">
       <div class="pageContent">
-        <p>Knowledge Page</p>
+        <h1>Knowledges</h1>
       </div>
       <a class="toLeft" href="#aboutMe">←</a>
       <a class="toBottom" href="#contactPage">↓</a>
@@ -32,7 +32,7 @@
 
     <div id="projectsPage" class="background">
       <div class="pageContent">
-        <p>Projects Page</p>
+        <h1>Projects</h1>
       </div>
       <a class="toTop" href="#aboutMe">↑</a>
       <a class="toRight" href="#contactPage">→</a>
@@ -40,7 +40,7 @@
 
     <div id="contactPage" class="background">
       <div class="pageContent">
-        <p>Contacts Page</p>
+        <h1>Contacts</h1>
       </div>
       <a class="toTop" href="#knowledgePage">↑</a>
       <a class="toLeft" href="#projectsPage">←</a>
