--- a/main.html
+++ b/main.html
@@ -13,7 +13,7 @@
 
   <body>
 
-    <main id="aboutMe" class="background" onClick="test()">
+    <main id="aboutMe" class="background">
       <div class="pageContent">
         <h1>About Me</h1>
         <p>Bio goes here</p>
