--- a/main.html
+++ b/main.html
@@ -13,38 +13,41 @@
 
   <body>
 
-    <main id="aboutMe" class="background">
-      <div class="pageContent">
-        <h1>About Me</h1>
-        <p>Bio goes here!!!</p>
-      </div>
-      <a class="toRight" href="#knowledgePage">→</a>
-      <a class="toBottom" href="#projectsPage">↓</a>
+    <main>
+      <section id="aboutMe" class="background">
+        <div class="pageContent">
+          <h1>About Me</h1>
+          <p>Bio goes here!!!</p>
+        </div>
+
+        <a class="toRight" href="#knowledgePage">→</a>
+        <a class="toBottom" href="#projectsPage">↓</a>
+      </section>
     </main>
 
-    <div id="knowledgePage" class="background">
+    <section id="knowledgePage" class="background">
       <div class="pageContent">
         <h1>Knowledges</h1>
       </div>
       <a class="toLeft" href="#aboutMe">←</a>
       <a class="toBottom" href="#contactPage">↓</a>
-    </div>
+    </section>
 
-    <div id="projectsPage" class="background">
+    <section id="projectsPage" class="background">
       <div class="pageContent">
         <h1>Projects</h1>
       </div>
       <a class="toTop" href="#aboutMe">↑</a>
       <a class="toRight" href="#contactPage">→</a>
-    </div>
+    </section>
 
-    <div id="contactPage" class="background">
+    <section id="contactPage" class="background">
       <div class="pageContent">
         <h1>Contacts</h1>
       </div>
       <a class="toTop" href="#knowledgePage">↑</a>
       <a class="toLeft" href="#projectsPage">←</a>
-    </div>
+    </section>
   </body>
 
   <script src="index.js"></script>
