--- a/main.html
+++ b/main.html
@@ -13,8 +13,7 @@
 
   <body>
 
-    <main>
-      <section id="aboutMe" class="background">
+      <main id="aboutMe" class="background">
         <div class="pageContent">
           <h1>About Me</h1>
           <p>Bio goes here!!!</p>
@@ -22,8 +21,7 @@
 
         <a class="toRight" href="#knowledgePage">→</a>
         <a class="toBottom" href="#projectsPage">↓</a>
-      </section>
-    </main>
+      </main>
 
     <section id="knowledgePage" class="background">
       <div class="pageContent">
