--- a/main.html
+++ b/main.html
@@ -5,7 +5,7 @@
 <html>
   
   <head>
-    <title>Samekh</title>
+    <title>Samekh 😎</title>
     <meta charset="UTF-8">
     <link rel="stylesheet" href="./style.css">
     <link href="https://fonts.googleapis.com/css2?family=Orbitron:wght@400;900&display=swap" rel="stylesheet">
@@ -13,15 +13,14 @@
 
   <body>
 
-      <main id="aboutMe" class="background">
-        <div class="pageContent">
-          <h1>About Me</h1>
-          <p>Bio goes here!!!!!!</p>
-        </div>
-
-        <a class="toRight" href="#knowledgePage">→</a>
-        <a class="toBottom" href="#projectsPage">↓</a>
-      </main>
+    <main id="aboutMe" class="background">
+      <div class="pageContent">
+        <h1>About Me</h1>
+        <p>Bio goes here!!!!!!</p>
+      </div>
+      <a class="toRight" href="#knowledgePage">→</a>
+      <a class="toBottom" href="#projectsPage">↓</a>
+    </main>
 
     <section id="knowledgePage" class="background">
       <div class="pageContent">
