--- a/main.html
+++ b/main.html
@@ -16,7 +16,7 @@
     <main id="aboutMe" class="background">
       <div class="pageContent">
         <h1>About Me</h1>
-        <p>Bio goes here and I'm PC!!</p>
+        <p>Bio goes here and I'm on JB!!</p>
       </div>
       <a class="toRight" href="#knowledgePage">→</a>
       <a class="toBottom" href="#projectsPage">↓</a>
@@ -25,6 +25,7 @@
     <section id="knowledgePage" class="background">
       <div class="pageContent">
         <h1>Knowledges</h1>
+        <p>Also some <a href="#projectsPage">Projects</a> done.</p>
       </div>
       <a class="toLeft" href="#aboutMe">←</a>
       <a class="toBottom" href="#contactPage">↓</a>
@@ -33,6 +34,7 @@
     <section id="projectsPage" class="background">
       <div class="pageContent">
         <h1>Projects</h1>
+        <p>Also some <a href="#knowledgePage">Subjects</a> I've know about.</p>
       </div>
       <a class="toTop" href="#aboutMe">↑</a>
       <a class="toRight" href="#contactPage">→</a>
