--- a/main.html
+++ b/main.html
@@ -16,7 +16,7 @@
   <main id="aboutMe" class="background">
     <div class="pageContent">
       <h1>About Me</h1>
-      <p>Bio goes here and I'm on JB!!</p>
+      <p>Bio goes here and I'm on JB!! <br>You can <a href="#contactPage">contact me</a> also</p>
     </div>
     <a class="toRight" href="#knowledgePage">→</a>
     <a class="toBottom" href="#projectsPage">↓</a>
