--- a/main.html
+++ b/main.html
@@ -25,7 +25,7 @@
   <section id="knowledgePage" class="background">
     <div class="pageContent">
       <h1>Knowledges</h1>
-      <p>Also some <a href="#projectsPage">Projects</a> done.</p>
+      <p><a href="https://cursos.alura.com.br/user/samekh">Alura</a> and <a href="https://www.codecademy.com/profiles/iSamekh">codeCademy</a><br>Also some <a href="#projectsPage">Projects</a> done.</p>
     </div>
     <a class="toLeft" href="#aboutMe">←</a>
     <a class="toBottom" href="#contactPage">↓</a>
@@ -34,7 +34,7 @@
   <section id="projectsPage" class="background">
     <div class="pageContent">
       <h1>Projects</h1>
-      <p>Also some <a href="#knowledgePage">Subjects</a> I've know about.</p>
+      <p>Hosted in <a href="https://github.com/iSamekh">github</a><br>Galton Board<br>Also some <a href="#knowledgePage">Subjects</a> I've know about.</p>
     </div>
     <a class="toTop" href="#aboutMe">↑</a>
     <a class="toRight" href="#contactPage">→</a>
@@ -43,6 +43,7 @@
   <section id="contactPage" class="background">
     <div class="pageContent">
       <h1>Contacts</h1>
+      <p><a href="#aboutMe">Main</a></p>
     </div>
     <a class="toTop" href="#knowledgePage">↑</a>
     <a class="toLeft" href="#projectsPage">←</a>
