--- a/main.html
+++ b/main.html
@@ -12,7 +12,7 @@
 </head>
 
 <body>
-
+  <img src="Dark-Star SVG.svg">
   <main id="aboutMe" class="background">
     <div class="pageContent">
       <h1>About Me</h1>
