--- a/main.html
+++ b/main.html
@@ -12,7 +12,10 @@
 </head>
 
 <body>
-  <img src="Dark-Star SVG.svg">
+  <svg src="img/Dark Star SVG.svg" id="star">
+
+  </svg>
+
   <main id="aboutMe" class="background">
     <div class="pageContent">
       <h1>About Me</h1>
