--- a/main.html
+++ b/main.html
@@ -12,8 +12,18 @@
 </head>
 
 <body>
-  <svg src="img/Dark Star SVG.svg" id="star">
 
+  <svg width="200vw" height="150vh" viewBox="50 -93 20 220" fill="none" xmlns="http://www.w3.org/2000/svg">
+  
+    <g transform="translate(-130.4000,236.050000) scale(0.100000,-0.100000)"
+    fill="#000000" stroke="none">
+    <path d="M1897 3580 c-4 -19 -12 -64 -18 -100 -35 -214 -109 -434 -214 -645
+    -97 -193 -182 -312 -325 -456 -293 -295 -690 -474 -1195 -541 l-100 -13 86 -7
+    c121 -10 352 -61 494 -108 141 -48 372 -160 478 -233 409 -282 677 -733 778
+    -1311 11 -60 21 -111 22 -112 2 -2 9 36 16 84 33 232 116 488 229 706 104 201
+    218 350 383 500 265 241 689 420 1112 470 l112 13 -60 7 c-428 53 -791 188
+    -1070 400 -380 288 -640 778 -718 1356 -3 22 -4 20 -10 -10z"/>
+    </g>
   </svg>
 
   <main id="aboutMe" class="background">
