--- a/main.html
+++ b/main.html
@@ -13,10 +13,11 @@
 
 <body>
 
-  <svg width="200vw" height="150vh" viewBox="50 -93 20 220" fill="none" xmlns="http://www.w3.org/2000/svg">
+  <img src="/img/cogConfig.png">
+
+  <svg height="10vh" viewBox="-2vh 10vh 100% 100%" xmlns="http://www.w3.org/2000/svg">
   
-    <g transform="translate(-130.4000,236.050000) scale(0.100000,-0.100000)"
-    fill="#000000" stroke="none">
+    <g fill="#005EB8" stroke="none">
     <path d="M1897 3580 c-4 -19 -12 -64 -18 -100 -35 -214 -109 -434 -214 -645
     -97 -193 -182 -312 -325 -456 -293 -295 -690 -474 -1195 -541 l-100 -13 86 -7
     c121 -10 352 -61 494 -108 141 -48 372 -160 478 -233 409 -282 677 -733 778
@@ -29,7 +30,7 @@
   <main id="aboutMe" class="background">
     <div class="pageContent">
       <h1>About Me</h1>
-      <p>Bio goes here and I'm on JB!! <br>You can <a href="#contactPage">contact me</a> also</p>
+      <p>Bio goes here <br><a href="#contactPage">Contact</a></p>
     </div>
     <a class="toRight" href="#knowledgePage">→</a>
     <a class="toBottom" href="#projectsPage">↓</a>
