Meta lang and viewport

--- a/index.html
+++ b/index.html
@@ -7,6 +7,10 @@
 <head>
   <title>Samekh 😎</title>
   <meta charset="UTF-8">
+
+  <html lang="en">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+
   <link rel="stylesheet" href="./style.css">
   <link href="https://fonts.googleapis.com/css2?family=Orbitron:wght@400;900&display=swap" rel="stylesheet">
 </head>
