--- a/index.html
+++ b/index.html
@@ -17,11 +17,10 @@
 
 <body>
 
-  <img src="/img/cogConfig.png">
+  <div id="config"></div>
 
-  <svg height="10vh" viewBox="-2vh 10vh 100% 100%" xmlns="http://www.w3.org/2000/svg">
-  
-    <g fill="#005EB8" stroke="none">
+  <svg version="1.1" width="100vw" height="100vh" viewBox="-500 600 1200 1200" xmlns="http://www.w3.org/2000/svg">
+    <g fill="#005EB8">
     <path d="M1897 3580 c-4 -19 -12 -64 -18 -100 -35 -214 -109 -434 -214 -645
     -97 -193 -182 -312 -325 -456 -293 -295 -690 -474 -1195 -541 l-100 -13 86 -7
     c121 -10 352 -61 494 -108 141 -48 372 -160 478 -233 409 -282 677 -733 778
