--- a/index.html
+++ b/index.html
@@ -45,6 +45,7 @@
       <h1>Knowledges</h1>
       <p>Besides official documentations, I'm usually studing in <a href="https://cursos.alura.com.br/user/samekh" target="_blank" rel="noreferrer noopener">Alura</a> and <a href="https://www.codecademy.com/profiles/iSamekh" target="_blank" rel="noreferrer noopener">codeCademy</a><br>Also some <a href="#projectsPage">Projects</a> done.</p>
     </div>
+    <div class="pageContentBG">
     <a class="toLeft" href="#aboutMe">←</a>
     <a class="toBottom" href="#contactPage">↓</a>
   </section>
