--- a/index.html
+++ b/index.html
@@ -21,12 +21,12 @@
 
   <svg version="1.1" width="100vw" height="100vh" viewBox="-500 600 1200 1200" xmlns="http://www.w3.org/2000/svg">
     <g fill="#005EB8">
-    <path d="M1897 3580 c-4 -19 -12 -64 -18 -100 -35 -214 -109 -434 -214 -645
+      <path d="M1897 3580 c-4 -19 -12 -64 -18 -100 -35 -214 -109 -434 -214 -645
     -97 -193 -182 -312 -325 -456 -293 -295 -690 -474 -1195 -541 l-100 -13 86 -7
     c121 -10 352 -61 494 -108 141 -48 372 -160 478 -233 409 -282 677 -733 778
     -1311 11 -60 21 -111 22 -112 2 -2 9 36 16 84 33 232 116 488 229 706 104 201
     218 350 383 500 265 241 689 420 1112 470 l112 13 -60 7 c-428 53 -791 188
-    -1070 400 -380 288 -640 778 -718 1356 -3 22 -4 20 -10 -10z"/>
+    -1070 400 -380 288 -640 778 -718 1356 -3 22 -4 20 -10 -10z" />
     </g>
   </svg>
 
@@ -35,28 +35,32 @@
       <h1>About Me</h1>
       <p>Bio goes here <br><a href="#contactPage">Contact</a></p>
     </div>
-    <a class="toRight" href="#knowledgePage">→</a>
-    <a class="toBottom" href="#projectsPage">↓</a>
+    <a class="toRight" href="#knowledgePage" onclick="toKnowledgePage()"></a>
+    <a class="toBottom" href="#projectsPage" onclick="toProjectsPage()"></a>
   </main>
 
   <!-- https://www.freecodecamp.org/learn/2022/responsive-web-design/learn-html-by-building-a-cat-photo-app/step-8 -->
   <section id="knowledgePage" class="background">
     <div class="pageContent">
       <h1>Knowledges</h1>
-      <p>Besides official documentations, I'm usually studing in <a href="https://cursos.alura.com.br/user/samekh" target="_blank" rel="noreferrer noopener">Alura</a> and <a href="https://www.codecademy.com/profiles/iSamekh" target="_blank" rel="noreferrer noopener">codeCademy</a><br>Also some <a href="#projectsPage">Projects</a> done.</p>
+      <p>Besides official documentations, I'm usually studing in <a href="https://cursos.alura.com.br/user/samekh"
+          target="_blank" rel="noreferrer noopener">Alura</a> and <a href="https://www.codecademy.com/profiles/iSamekh"
+          target="_blank" rel="noreferrer noopener">codeCademy</a><br>Also some <a href="#projectsPage">Projects</a>
+        done.</p>
     </div>
     <div class="pageContentBG">
-    <a class="toLeft" href="#aboutMe">←</a>
-    <a class="toBottom" href="#contactPage">↓</a>
+      <a class="toLeft" href="#aboutMe" onclick="toAboutMe()"></a>
+      <a class="toBottom" href="#contactPage" onclick="toContactPage()"></a>
   </section>
 
   <section id="projectsPage" class="background">
     <div class="pageContent">
       <h1>Projects</h1>
-      <p>Hosted in <a href="https://github.com/iSamekh" target="_blank" rel="noreferrer noopener">github</a><br>Galton Board<br>Also some <a href="#knowledgePage">Subjects</a> I've know about.</p>
+      <p>Hosted in <a href="https://github.com/iSamekh" target="_blank" rel="noreferrer noopener">github</a><br>Galton
+        Board<br>Also some <a href="#knowledgePage">Subjects</a> I've know about.</p>
     </div>
-    <a class="toTop" href="#aboutMe">↑</a>
-    <a class="toRight" href="#contactPage">→</a>
+    <a class="toTop" href="#aboutMe" onclick="toAboutMe()"></a>
+    <a class="toRight" href="#contactPage" onclick="toContactPage()"></a>
   </section>
 
   <section id="contactPage" class="background">
@@ -64,8 +68,8 @@
       <h1>Contacts</h1>
       <p><a href="#aboutMe">Main</a></p>
     </div>
-    <a class="toTop" href="#knowledgePage">↑</a>
-    <a class="toLeft" href="#projectsPage">←</a>
+    <a class="toTop" href="#knowledgePage" onclick="toKnowledgePage()"></a>
+    <a class="toLeft" href="#projectsPage" onclick="toProjectsPage()"></a>
   </section>
 </body>
 
