--- a/index.html
+++ b/index.html
@@ -35,12 +35,11 @@
       <h1>About Me</h1>
       <p>Bio goes here <br><a href="#contactPage">Contact</a></p>
     </div>
-    <a class="toRight" href="#knowledgePage" ></a>
-    <a class="toBottom" href="#projectsPage" ></a>
+    <a class="toRight" href="#knowledgePage" onclick="toKnowledgePage()"></a>
+    <a class="toBottom" href="#projectsPage" onclick="toProjectsPage()"></a>
   </main>
 
-  <!--onclick="toKnowledgePage() onclick="toProjectsPage()""  
-    https://www.freecodecamp.org/learn/2022/responsive-web-design/learn-html-by-building-a-cat-photo-app/step-8 -->
+  <!-- https://www.freecodecamp.org/learn/2022/responsive-web-design/learn-html-by-building-a-cat-photo-app/step-8 -->
   <section id="knowledgePage" class="background">
     <div class="pageContent">
       <h1>Knowledges</h1>
