--- a/index.html
+++ b/index.html
@@ -33,7 +33,7 @@
   <main id="aboutMe" class="background">
     <div class="pageContent">
       <h1>About Me</h1>
-      <p>Bio goes here <br><a href="#contactPage">Contact</a></p>
+      <p>Bio goes here <br><a href="#contactPage" onclick="toContactPage()">Contact</a></p>
     </div>
     <a class="toRight" href="#knowledgePage" onclick="toKnowledgePage()"></a>
     <a class="toBottom" href="#projectsPage" onclick="toProjectsPage()"></a>
@@ -65,7 +65,7 @@
   <section id="contactPage" class="background">
     <div class="pageContent">
       <h1>Contacts</h1>
-      <p><a href="#aboutMe">Main</a></p>
+      <p><a href="#aboutMe" onclick="toAboutMe()">Main</a></p>
     </div>
     <a class="toTop" href="#knowledgePage" onclick="toKnowledgePage()"></a>
     <a class="toLeft" href="#projectsPage" onclick="toProjectsPage()"></a>
