--- a/index.html
+++ b/index.html
@@ -45,7 +45,7 @@
       <h1>Knowledges</h1>
       <p>Besides official documentations, I'm usually studing in <a href="https://cursos.alura.com.br/user/samekh"
           target="_blank" rel="noreferrer noopener">Alura</a> and <a href="https://www.codecademy.com/profiles/iSamekh"
-          target="_blank" rel="noreferrer noopener">codeCademy</a><br>Also some <a href="#projectsPage">Projects</a>
+          target="_blank" rel="noreferrer noopener">codeCademy</a><br>Also some <a href="#projectsPage" onclick="toProjectsPage()">Projects</a>
         done.</p>
     </div>
       <a class="toLeft" href="#aboutMe" onclick="toAboutMe()"></a>
@@ -56,7 +56,7 @@
     <div class="pageContent">
       <h1>Projects</h1>
       <p>Hosted in <a href="https://github.com/iSamekh" target="_blank" rel="noreferrer noopener">github</a><br>Galton
-        Board<br>Also some <a href="#knowledgePage">Subjects</a> I've know about.</p>
+        Board<br>Also some <a href="#knowledgePage" onclick="toKnowledgePage()">Subjects</a> I've know about.</p>
     </div>
     <a class="toTop" href="#aboutMe" onclick="toAboutMe()"></a>
     <a class="toRight" href="#contactPage" onclick="toContactPage()"></a>
