--- a/index.html
+++ b/index.html
@@ -10,7 +10,15 @@
 
   <html lang="en">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <link rel="shortcut icon" type="image/x-icon" href="/favicon.ico">
+
+  <link rel="apple-touch-icon" sizes="180x180" href="/apple-touch-icon.png">
+  <link rel="icon" type="image/png" sizes="32x32" href="/favicon-32x32.png">
+  <link rel="icon" type="image/png" sizes="16x16" href="/favicon-16x16.png">
+  <link rel="manifest" href="/site.webmanifest">
+  <link rel="mask-icon" href="/safari-pinned-tab.svg" color="#5bbad5">
+  <meta name="msapplication-TileColor" content="#da532c">
+  <meta name="theme-color" content="#ffffff">
+
   <link rel="stylesheet" href="./style.css">
   <link href="https://fonts.googleapis.com/css2?family=Orbitron:wght@400;900&display=swap" rel="stylesheet">
 </head>
@@ -45,11 +53,12 @@
       <h1>Knowledges</h1>
       <p>Besides official documentations, I'm usually studing in <a href="https://cursos.alura.com.br/user/samekh"
           target="_blank" rel="noreferrer noopener">Alura</a> and <a href="https://www.codecademy.com/profiles/iSamekh"
-          target="_blank" rel="noreferrer noopener">codeCademy</a><br>Also some <a href="#projectsPage" onclick="toProjectsPage()">Projects</a>
+          target="_blank" rel="noreferrer noopener">codeCademy</a><br>Also some <a href="#projectsPage"
+          onclick="toProjectsPage()">Projects</a>
         done.</p>
     </div>
-      <a class="toLeft" href="#aboutMe" onclick="toAboutMe()"></a>
-      <a class="toBottom" href="#contactPage" onclick="toContactPage()"></a>
+    <a class="toLeft" href="#aboutMe" onclick="toAboutMe()"></a>
+    <a class="toBottom" href="#contactPage" onclick="toContactPage()"></a>
   </section>
 
   <section id="projectsPage" class="background">
