Sticky config test

--- a/index.html
+++ b/index.html
@@ -54,8 +54,7 @@
       <p>Besides official documentations, I'm usually studing in <a href="https://cursos.alura.com.br/user/samekh"
           target="_blank" rel="noreferrer noopener">Alura</a> and <a href="https://www.codecademy.com/profiles/iSamekh"
           target="_blank" rel="noreferrer noopener">codeCademy</a><br>Also some <a href="#projectsPage"
-          onclick="toProjectsPage()">Projects</a>
-        done.</p>
+          onclick="toProjectsPage()">Projects</a> done.</p>
     </div>
     <a class="toLeft" href="#aboutMe" onclick="toAboutMe()"></a>
     <a class="toBottom" href="#contactPage" onclick="toContactPage()"></a>
