--- a/index.html
+++ b/index.html
@@ -26,7 +26,8 @@
 <body>
 
   <div id="config"></div>
-
+  <div id="configMenu" onclick="config()"></div>
+  
   <svg version="1.1" width="100vw" height="100vh" viewBox="-500 600 1200 1200" xmlns="http://www.w3.org/2000/svg">
     <g fill="#005EB8">
       <path d="M1897 3580 c-4 -19 -12 -64 -18 -100 -35 -214 -109 -434 -214 -645
