--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
 
   <div id="config"></div>
   <!--<div id="configMenu" onclick="config()"></div>-->
-  
+
   <svg version="1.1" width="100vw" height="100vh" viewBox="-500 600 1200 1200" xmlns="http://www.w3.org/2000/svg">
     <g fill="#005EB8">
       <path d="M1897 3580 c-4 -19 -12 -64 -18 -100 -35 -214 -109 -434 -214 -645
@@ -43,12 +43,16 @@
     <div class="pageContent">
       <h1>About Me</h1>
       <p>Bio goes here <br><a href="#contactPage" onclick="toContactPage()">Contact</a></p>
+      <p>[ ] Div #configMenu in HTML</p>
+      <p>[ ] configMenu in CSS</p>
+      <p>[ ] function config() in javascript</p>
       <a class="toRight" href="#knowledgePage" onclick="toKnowledgePage()"></a>
       <a class="toBottom" href="#projectsPage" onclick="toProjectsPage()"></a>
     </div>
   </main>
 
   <!-- https://www.freecodecamp.org/learn/2022/responsive-web-design/learn-html-by-building-a-cat-photo-app/step-8 -->
+
   <section id="knowledgePage" class="background">
     <div class="pageContent">
       <h1>Knowledges</h1>
