--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
 <body>
 
   <div id="config"></div>
-  <!--<div id="configMenu" onclick="config()"></div>-->
+  <div id="configMenu" onclick="config()"></div>
 
   <svg version="1.1" width="100vw" height="100vh" viewBox="-500 600 1200 1200" xmlns="http://www.w3.org/2000/svg">
     <g fill="#005EB8">
@@ -43,7 +43,7 @@
     <div class="pageContent">
       <h1>About Me</h1>
       <p>Bio goes here <br><a href="#contactPage" onclick="toContactPage()">Contact</a></p>
-      <p>[ ] Div #configMenu in HTML</p>
+      <p>[X] Div #configMenu in HTML</p>
       <p>[ ] configMenu in CSS</p>
       <p>[ ] function config() in javascript</p>
       <a class="toRight" href="#knowledgePage" onclick="toKnowledgePage()"></a>
