--- a/index.html
+++ b/index.html
@@ -44,7 +44,7 @@
       <h1>About Me</h1>
       <p>Bio goes here <br><a href="#contactPage" onclick="toContactPage()">Contact</a></p>
       <p>[X] Div #configMenu in HTML</p>
-      <p>[ ] configMenu in CSS</p>
+      <p>[X] configMenu in CSS</p>
       <p>[ ] function config() in javascript</p>
       <a class="toRight" href="#knowledgePage" onclick="toKnowledgePage()"></a>
       <a class="toBottom" href="#projectsPage" onclick="toProjectsPage()"></a>
