On click to  correct place

--- a/index.html
+++ b/index.html
@@ -25,8 +25,8 @@
 
 <body>
 
-  <div id="config"></div>
-  <div id="configMenu" onclick="configMenu()"></div>
+  <div id="config" onclick="configMenu()"></div>
+  <div id="configMenu"></div>
 
   <svg version="1.1" width="100vw" height="100vh" viewBox="-500 600 1200 1200" xmlns="http://www.w3.org/2000/svg">
     <g fill="#005EB8">
