--- a/index.html
+++ b/index.html
@@ -56,7 +56,7 @@
   <section id="knowledgePage" class="background">
     <div class="pageContent">
       <h1>Knowledges</h1>
-      <p>Besides official documentations, I'm usually studing in <a href="https://cursos.alura.com.br/user/samekh"
+      <p>Besides official documentations, I'm usually studyng in <a href="https://cursos.alura.com.br/user/samekh"
           target="_blank" rel="noreferrer noopener">Alura</a> and <a href="https://www.codecademy.com/profiles/iSamekh"
           target="_blank" rel="noreferrer noopener">codeCademy</a><br>Also some <a href="#projectsPage"
           onclick="toProjectsPage()">Projects</a> done.</p>
