--- a/index.html
+++ b/index.html
@@ -48,7 +48,7 @@
   <main id="aboutMe" class="background">
     <div class="pageContent">
       <h1>About Me</h1>
-      <p>Bio goes here <br><a href="#contactPage" onclick="toContactPage()">Contact</a></p>
+      <p>Bio goes here <br><a href="#contactPage" onclick="goRight(), goDown()">Contact</a></p>
       <p>[X] Div #configMenu in HTML</p>
       <p>[X] configMenu in CSS</p>
       <p>[X] function config() in javascript</p>
@@ -65,7 +65,7 @@
       <p>Besides official documentations, I'm usually studyng in <a href="https://cursos.alura.com.br/user/samekh"
           target="_blank" rel="noreferrer noopener">Alura</a> and <a href="https://www.codecademy.com/profiles/iSamekh"
           target="_blank" rel="noreferrer noopener">codeCademy</a><br>Also some <a href="#projectsPage"
-          onclick="toProjectsPage()">Projects</a> done.</p>
+          onclick="goDown(), goLeft()">Projects</a> done.</p>
       <a class="toLeft" href="#aboutMe" onclick="goLeft()"></a>
       <a class="toBottom" href="#contactPage" onclick="goDown()"></a>
     </div>
@@ -75,7 +75,7 @@
     <div class="pageContent">
       <h1>Projects</h1>
       <p>Hosted in <a href="https://github.com/iSamekh" target="_blank" rel="noreferrer noopener">github</a><br>Galton
-        Board<br>Also some <a href="#knowledgePage" onclick="toKnowledgePage()">Subjects</a> I've know about.</p>
+        Board<br>Also some <a href="#knowledgePage" onclick="goUp(), goRight()">Subjects</a> I've know about.</p>
       <a class="toTop" href="#aboutMe" onclick="goUp()"></a>
       <a class="toRight" href="#contactPage" onclick="goRight()"></a>
     </div>
@@ -84,7 +84,7 @@
   <section id="contactPage" class="background">
     <div class="pageContent">
       <h1>Contacts</h1>
-      <p><a href="#aboutMe" onclick="toAboutMe()">Main</a></p>
+      <p><a href="#aboutMe" onclick="goLeft(), goUp()">Main</a></p>
       <a class="toTop" href="#knowledgePage" onclick="goUp()"></a>
       <a class="toLeft" href="#projectsPage" onclick="goLeft()"></a>
     </div>
