--- a/index.html
+++ b/index.html
@@ -34,7 +34,7 @@
     </label>
   </div>
 
-  <svg version="1.1" width="100vw" height="100vh" viewBox="-500 600 1200 1200" xmlns="http://www.w3.org/2000/svg">
+  <svg version="1.1" width="100vw" height="100vh" viewBox="-500 600 1200 1200" xmlns="https://www.w3.org/2000/svg">
     <g>
       <path d="M1897 3580 c-4 -19 -12 -64 -18 -100 -35 -214 -109 -434 -214 -645
     -97 -193 -182 -312 -325 -456 -293 -295 -690 -474 -1195 -541 l-100 -13 86 -7
