--- a/index.html
+++ b/index.html
@@ -75,18 +75,18 @@
     <div class="pageContent">
       <h1>Projects</h1>
       <p>Hosted in <a href="https://github.com/iSamekh" target="_blank" rel="noreferrer noopener">github</a><br>Galton
-        Board<br>Also some <a href="#knowledgePage" onclick="movePage(-1)">Subjects</a> I've know about.</p>
-      <a class="toTop" href="#aboutMe" onclick="movePage(-2)"></a>
-      <a class="toRight" href="#contactPage" onclick="movePage(1)"></a>
+        Board<br>Also some <a href="#knowledgePage" onclick="pageMove(-1)">Subjects</a> I've know about.</p>
+      <a class="toTop" href="#aboutMe" onclick="pageMove(-2)"></a>
+      <a class="toRight" href="#contactPage" onclick="pageMove(1)"></a>
     </div>
   </section>
 
   <section id="contactPage" class="background">
     <div class="pageContent">
       <h1>Contacts</h1>
-      <p><a href="#aboutMe" onclick="movePage(-3)">Main</a></p>
-      <a class="toTop" href="#knowledgePage" onclick="movePage(-2)"></a>
-      <a class="toLeft" href="#projectsPage" onclick="movePage(-1)"></a>
+      <p><a href="#aboutMe" onclick="pageMove(-3)">Main</a></p>
+      <a class="toTop" href="#knowledgePage" onclick="pageMove(-2)"></a>
+      <a class="toLeft" href="#projectsPage" onclick="pageMove(-1)"></a>
     </div>
   </section>
 </body>
