Switch case pages

--- a/index.html
+++ b/index.html
@@ -48,7 +48,7 @@
   <main id="aboutMe" class="background">
     <div class="pageContent">
       <h1>About Me</h1>
-      <p>Bio goes here <br><a href="#contactPage" onclick="pageMove(3)">Contact</a></p>
+      <p>WIP <br><a href="#contactPage" onclick="pageMove(3)">Contact</a></p>
       <p>Name</p>
       <p>Age</p>
       <p>Live in</p>
